--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "axios": "^1.2.1",
+    "js-cookie": "^3.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
