--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.1",
+    "chart.js": "^4.1.1",
     "js-cookie": "^3.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
